fix(OneKeyPurge): 帮助弹窗z-index修正

--- a/src/gadgets/OneKeyPurge/index.less
+++ b/src/gadgets/OneKeyPurge/index.less
@@ -1,6 +1,10 @@
 #one-key-purge {
     @borderStyle: 1px solid #bbb;
 
+    >.oo-ui-window {
+        z-index: 100;
+    }
+
     .okp-button {
         flex: 0 1;
         padding: 6px;
